# silverNetWeldPrj

./: README.md
Robotbase/: CMakeLists.txt  readme.txt
Robotbase/config/: config.ini
Robotbase/config/ConfigRead/: config.ini  readme.ini
Robotbase/config/copy/: config20241220.ini  config20241231.ini  config20250107-2.ini  config20250107.ini  config20250206.ini  config20250209.ini  config20250210.ini  config20250218.ini
Robotbase/include/Base/: RobotSystem.h  robotStruct copy.h  robotStruct.h
Robotbase/include/DeviceDriver/: device_interface.h
Robotbase/include/Grip/: grip_interface.h
Robotbase/include/Move/: MovePlan.h  SensorForceControl.h
Robotbase/include/RobotMain/: ControlCanFun.h  HYYRobotInterface.h  IOdeviceControl.h  IniParser.h  TCP_Protocol.h  TaiHuCAN.h  TcpSocket.h  TcpTeleGlobalStruct.h  ThreeAxisAutoRun.h  XMLParser.hpp  YinwDeviceAutoRunFlow.h  YinwDeviceParas.h  YinwMotion.h  YinwMotionGlobal.h  an_packet_protocol.h  communication.h  controlcan.h  defineConfig.h  globalfun.h  msgPackage.h  tinyxml2.h
Robotbase/include/Sensor/: torqueSensor_interface.h
Robotbase/include/Teach/: robot_teach_interface.h
Robotbase/include/Technology/stack/: StackInterface.h
Robotbase/include/Tool/: readData.h  saveData.h
Robotbase/src/: AirPump.cpp  ControlCan.cpp  DeviceReset.cpp  EtherCATRealtimeCtrl.cpp  FaultDetection.cpp  FlattenMove.cpp  FlattenStepCalcu.cpp  Gripping.cpp  IOdeviceControl.cpp  IniParaser.cpp  TaiHuMotor.cpp  TcpSocket.cpp  ThreeAxisAutoRun.cpp  ThreeAxisPlan.cpp  WareHouse.cpp  WeldDesk.cpp  WeldingProcess.cpp  YinwDeviceAutoRunFlow.cpp  YinwDeviceParas.cpp  YinwMotion.cpp  YinwPressMove.cpp  YinwStamping.cpp  ZeroPointPosINI.cpp  communication.cpp  global.cpp  main.cpp  msgPackage.cpp
global/: XMLParser.hpp  tinyxml2.cpp
